[package]
name = "btree"
version = "0.1.0"
authors = ["Josh Karns <jkarns275@gmail.com>"]
description = "A generic persistant BTree, using the RawSerde crate"
license = "MIT"

[dependencies]
raw_serde = "0.1.4"

[profile.test]
opt-level = 3
debug = 2
rpath = false
lto = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'
